added pm2 command

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -42,8 +42,11 @@ jobs:
             sudo npm run build
             sudo bash /frontend/frontend.sh
             sudo chown -R ubuntu:ubuntu /var/www/html
-            timeout 5m npm run start
-            npm run start &
+            # timeout 1m npm run start
+            pm2 start npm 
+            # npm run start &
+            sleep 5
+            done
              
 
     #   - name: PR Status
