--- a/package.json
+++ b/package.json
@@ -1,22 +1,11 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
-  }
-}
+    "name": "cd-demo",
+    "version": "1.0.0",
+    "description": "Continuous Deployment with GitHub Actions, DockerHub, and AWS EC2 tutorial for beginners",
+    "scripts": {
+    "start:dev": "node app.js"
+    },
+    "dependencies": {
+    "express": "⁴.17.1"
+    }
+   }
