--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cd-demo",
+    "name": "qbfrontend",
     "version": "1.0.0",
     "description": "Continuous Deployment with GitHub Actions, DockerHub, and AWS EC2 tutorial for beginners",
     "scripts": {
