--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -7,6 +7,8 @@ env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
+  QBFRONT_HOST_DNS: ${{ secrets.QBFRONT_HOST_DNS }}
+  QBFRONT_USERNAME: ${{ secrets.QBFRONT_USERNAME }}
 jobs:
   build:
     runs-on: ubuntu-latest
