--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -33,24 +33,25 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ env.DOCKERHUB_USERNAME }}
-        password: ${{ env.DOCKERHUB_TOKEN }}
-    - name: Set permissions for private key
-      run: |
-        echo "${{ env.AWS_PRIVATE_KEY }}" > key.pem
-        chmod 600 key.pem
-    - name: Pull Docker image
-      run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker pull karthickmuppilirajan/qbfrontend:latest'
-    - name: Stop running container
-      run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker stop qbfrontend || true'
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker rm qbfrontend || true'
-    - name: Run new container
-      run: |
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@your-ec2-instance-ip 'sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest'
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
+      - name: Set permissions for private key
+        run: |
+          echo "${{ secrets.AWS_PRIVATE_KEY }}" | base64 -d > key.pem
+          chmod 600 key.pem
+      - name: SSH into EC2 and Run Script
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.QBFRONT_HOST_DNS }}
+          username: ${{ secrets.QBFRONT_USERNAME }}
+          key: ./key.pem  
+          script: |
+            sudo docker pull karthimuppilirajan/qbfrontend:latest
+            sudo docker stop qbfrontend
+            sudo docker rm qbfrontend
+            sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest
