--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,58 +1,110 @@
-name: Build on DockerHub and Deploy to AWS
+# name: Build on DockerHub and Deploy to AWS
+# on:
+#   push:
+#     branches:
+#       - qubitsfrontend
+# env:
+#   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+#   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+#   AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
+#   QBFRONT_HOST_DNS: ${{ secrets.QBFRONT_HOST_DNS }}
+#   QBFRONT_USERNAME: ${{ secrets.QBFRONT_USERNAME }}
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Build and push Docker image
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: ./
+#           push: true
+#           Dockerfile: ./Dockerfile
+#           tags: karthickmuppilirajan/qbfrontend:latest
+#   deploy:
+#     needs: build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+#       - name: Login to Docker Hub
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ env.DOCKERHUB_USERNAME }}
+#           password: ${{ env.DOCKERHUB_TOKEN }}
+#       # - name: Set permissions for private key
+#       #   run: |
+#       #     echo "${{ secrets.AWS_PRIVATE_KEY }}" | base64 -d > key.pem
+#       #     chmod 600 key.pem
+#       - name: SSH into EC2 and Run Script
+#         uses: appleboy/ssh-action@master
+#         with:
+#           host: ${{ secrets.QBFRONT_HOST_DNS }}
+#           username: ${{ secrets.QBFRONT_USERNAME }}
+#           key: ${{ secrets.AWS_PRIVATE_KEY }} 
+#           script: |
+#             sudo docker pull karthickmuppilirajan/qbfrontend:latest
+#             sudo docker ps -a
+#             sudo docker stop qbfrontend
+#             sudo docker rm qbfrontend
+#             sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest
+
+name: Release and Push to ECR
+
 on:
   push:
     branches:
       - qubitsfrontend
-env:
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-  AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
-  QBFRONT_HOST_DNS: ${{ secrets.QBFRONT_HOST_DNS }}
-  QBFRONT_USERNAME: ${{ secrets.QBFRONT_USERNAME }}
+
 jobs:
-  build:
+  release:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18.17.0'
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Release Please
+        run: npx release-please
+
+      - name: Set Image Tag
+        run: echo "IMAGE_TAG=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+
+  build_and_push:
+    needs: release
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          push: true
-          Dockerfile: ./Dockerfile
-          tags: karthickmuppilirajan/qbfrontend:latest
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
-      # - name: Set permissions for private key
-      #   run: |
-      #     echo "${{ secrets.AWS_PRIVATE_KEY }}" | base64 -d > key.pem
-      #     chmod 600 key.pem
-      - name: SSH into EC2 and Run Script
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.QBFRONT_HOST_DNS }}
-          username: ${{ secrets.QBFRONT_USERNAME }}
-          key: ${{ secrets.AWS_PRIVATE_KEY }} 
-          script: |
-            sudo docker pull karthickmuppilirajan/qbfrontend:latest
-            sudo docker ps -a
-            sudo docker stop qbfrontend
-            sudo docker rm qbfrontend
-            sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest
+
+      - name: Build and Push Docker Image
+        run: |
+          docker buildx create --use
+          docker buildx build -t qubits-cdk:${{ env.IMAGE_TAG }} .
+          docker tag qubits-cdk:${{ env.IMAGE_TAG }} 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${{ env.IMAGE_TAG }}
+          docker push 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${{ env.IMAGE_TAG }}
+
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  AWS_REGION: me-central-1
