--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -83,22 +83,18 @@ jobs:
       - name: Determine Current Version
         id: determine_version
         run: |
-          # Replace this command with the one that prints the current version of your project
-          current_version=$(echo "1.0.0")
+          # Assuming `release-please` determines the version from the commit history
+          current_version=$(npx release-please --dry-run | grep "Current version:" | cut -d ' ' -f 3)
 
           # Use output variable to pass the current version to the next steps
-          echo "CURRENT_VERSION=${current_version}" >> $GITHUB_ENV
+          echo "RELEASE_VERSION=${current_version}" >> $GITHUB_ENV
 
-      - name: Release Please
-        id: release
+      - name: Debug Information
         run: |
-          # Run release-please with the current version
-          release_version=$(npx release-please --version ${CURRENT_VERSION})
-          echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
+          echo "RELEASE_VERSION: ${RELEASE_VERSION}"
 
-
-      - name: Set Image Tag
-        run: echo "IMAGE_TAG=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+      - name: Set Docker Tag
+        run: echo "DOCKER_TAG=v${RELEASE_VERSION}" >> $GITHUB_ENV
 
   build_and_push:
     needs: release
@@ -111,12 +107,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Set Docker Tag
+        run: echo "DOCKER_TAG=v${RELEASE_VERSION}" >> $GITHUB_ENV
+
       - name: Build and Push Docker Image
         run: |
           docker buildx create --use
-          docker buildx build -t qubits-cdk:${{ env.IMAGE_TAG }} .
-          docker tag qubits-cdk:${{ env.IMAGE_TAG }} 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${{ env.IMAGE_TAG }}
-          docker push 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${{ env.IMAGE_TAG }}
+          docker buildx build -t qubits-cdk:${DOCKER_TAG} .
+          docker tag qubits-cdk:${DOCKER_TAG} 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${DOCKER_TAG}
+          docker push 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${DOCKER_TAG}
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
