--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18.17.0'
+          node-version: '14'
 
       - name: Install Dependencies
         run: npm install
@@ -89,12 +89,9 @@ jobs:
           # Use output variable to pass the current version to the next steps
           echo "RELEASE_VERSION=${current_version}" >> $GITHUB_ENV
 
-      - name: Debug Information
-        run: |
-          echo "RELEASE_VERSION: ${RELEASE_VERSION}"
-
-      - name: Set Docker Tag
-        run: echo "DOCKER_TAG=v${RELEASE_VERSION}" >> $GITHUB_ENV
+      - name: Release Please
+        id: release
+        uses: google-github-actions/release-please-action@v4
 
   build_and_push:
     needs: release
@@ -107,17 +104,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Set Docker Tag
-        run: echo "DOCKER_TAG=v${RELEASE_VERSION}" >> $GITHUB_ENV
+      - name: Set Image Tag
+        run: echo "DOCKER_TAG=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
 
       - name: Build and Push Docker Image
         run: |
           docker buildx create --use
-          docker buildx build -t qubits-cdk:${DOCKER_TAG} .
-          docker tag qubits-cdk:${DOCKER_TAG} 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${DOCKER_TAG}
-          docker push 351240349724.dkr.ecr.me-central-1.amazonaws.com/qubits-cdk:${DOCKER_TAG}
+          docker buildx build -t your-ecr-repository:${DOCKER_TAG} .
+          docker tag your-ecr-repository:${DOCKER_TAG} your-account-id.dkr.ecr.your-region.amazonaws.com/your-ecr-repository:${DOCKER_TAG}
+          docker push your-account-id.dkr.ecr.your-region.amazonaws.com/your-ecr-repository:${DOCKER_TAG}
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_REGION: me-central-1
+  AWS_REGION: your-region
+
