--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -36,3 +36,7 @@ jobs:
             git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
             git push origin v${{ steps.release.outputs.major }}
             git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
+
+      - name: Print major outputs
+        run: |
+            echo ${{ steps.release.outputs.major }}
