--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -57,73 +57,39 @@
 #             sudo docker rm qbfrontend
 #             sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest
 
-name: Release and Push to ECR
+name: Build and Upload Config
 
 on:
   push:
     branches:
-      - qubitsfrontenddd
+      - typeorm-github
 
 jobs:
-  release:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Create release-please-config.json
-        run: echo '{"plugins":["@release-please/update-version","@release-please/release-notes-generator","@release-please/changelog"]}' > release-please-config.json
+    - name: Create ormconfig.json
+      run: |
+        echo "import { DataSource } from 'typeorm';
+        export const AppDataSource = new DataSource({
+            type: 'postgres',
+            database: 'qubits',
+            host: 'localhost',
+            port: 5432,
+            username: 'postgres',
+            password: 'postgres',
+            entities: ['/src/**/**.entity{.ts,.js}'],
+            logging: true,
+            synchronize: false,
+            migrations: ['/src/migrations/*.{js,ts}'],
+        });" > typeorm.config.ts
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '14'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Release Please
-        id: release
-        uses: google-github-actions/release-please-action@v4
-        with:
-          token: ${{ secrets.PAT }}
-
-  build_and_push:
-    needs: release
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Get Latest Release Version
-        id: get_release_version
-        run: |
-          # Get the latest release version
-          release_version=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                            "https://api.github.com/repos/${{ github.repository }}/releases/latest" \
-                            | jq -r .tag_name)
-
-          # Use output variable to pass the release version to the next steps
-          echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
-
-      - name: Set Image Tag
-        run: echo "DOCKER_TAG=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
-
-      - name: Build and Push Docker Image
-        run: |
-          docker buildx create --use
-          docker buildx build -t public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG} .
-          docker tag public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG} public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG}
-          docker push public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG}
-
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_REGION: your-region
-
+    - name: Display Downloaded Files
+      run: |
+        ls -al
+        cat typeorm.config.ts
 
