--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -72,24 +72,8 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Create ormconfig.json
-      run: |
-        echo "import { DataSource } from 'typeorm';
-        export const AppDataSource = new DataSource({
-            type: 'postgres',
-            database: 'qubits',
-            host: 'localhost',
-            port: 5432,
-            username: 'postgres',
-            password: 'postgres',
-            entities: ['/src/**/**.entity{.ts,.js}'],
-            logging: true,
-            synchronize: false,
-            migrations: ['/src/migrations/*.{js,ts}'],
-        });" > typeorm.config.ts
-
-    - name: Display Downloaded Files
-      run: |
-        ls -al
-        cat typeorm.config.ts
-
+    - name: Save Config File
+      run: echo "${{ secrets.TYPEORM }}" > typeorm.config.ts
+    
+    - name: Display Config File
+      run: cat typeorm.config.ts
