added prod env to package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "Continuous Deployment with GitHub Actions, DockerHub, and AWS EC2 tutorial for beginners",
     "scripts": {
-    "start:dev": "node app.js"
+    "start:dev": "node app.js",
+    "start:prod": "node app.js"
     },
     "dependencies": {
     "express": "*"
