--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -29,101 +29,170 @@
 #           push: true
 #           Dockerfile: ./Dockerfile
 #           tags: karthickmuppilirajan/qbfrontend:latest
-#   deploy:
-#     needs: build
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
-#       - name: Login to Docker Hub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ env.DOCKERHUB_USERNAME }}
-#           password: ${{ env.DOCKERHUB_TOKEN }}
-#       # - name: Set permissions for private key
-#       #   run: |
-#       #     echo "${{ secrets.AWS_PRIVATE_KEY }}" | base64 -d > key.pem
-#       #     chmod 600 key.pem
-#       - name: SSH into EC2 and Run Script
-#         uses: appleboy/ssh-action@master
-#         with:
-#           host: ${{ secrets.QBFRONT_HOST_DNS }}
-#           username: ${{ secrets.QBFRONT_USERNAME }}
-#           key: ${{ secrets.AWS_PRIVATE_KEY }} 
-#           script: |
-#             sudo docker pull karthickmuppilirajan/qbfrontend:latest
-#             sudo docker ps -a
-#             sudo docker stop qbfrontend
-#             sudo docker rm qbfrontend
-#             sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest
+#   # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ env.DOCKERHUB_USERNAME }}
+  #         password: ${{ env.DOCKERHUB_TOKEN }}
+  #     # - name: Set permissions for private key
+  #     #   run: |
+  #     #     echo "${{ secrets.AWS_PRIVATE_KEY }}" | base64 -d > key.pem
+  #     #     chmod 600 key.pem
+  #     - name: SSH into EC2 and Run Script
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.QBFRONT_HOST_DNS }}
+  #         username: ${{ secrets.QBFRONT_USERNAME }}
+  #         key: ${{ secrets.AWS_PRIVATE_KEY }} 
+  #         script: |
+  #           sudo docker pull karthickmuppilirajan/qbfrontend:latest
+  #           sudo docker ps -a
+  #           sudo docker stop qbfrontend
+  #           sudo docker rm qbfrontend
+  #           sudo docker run -d --name qbfrontend -p 80:3000 karthickmuppilirajan/qbfrontend:latest
 
-name: Release and Push to ECR
+
+
+name: Release Please and Tag Docker Image
 
 on:
-  push:
-    branches:
-      - qubitsfrontenddd
+  workflow_run:
+    workflows: ["release-please"]
+    types:
+      - completed
+
+env:
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  release:
+  release-please:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Create release-please-config.json
-        run: echo '{"plugins":["@release-please/update-version","@release-please/release-notes-generator","@release-please/changelog"]}' > release-please-config.json
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '14'
+          node-version: 18.17.0
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: npm install
 
-      - name: Release Please
-        id: release
-        uses: google-github-actions/release-please-action@v4
-        with:
-          token: ${{ secrets.PAT }}
+      - name: Run release-please
+        run: npx release-please
 
-  build_and_push:
-    needs: release
+  create-pr-and-tag-image:
+    needs: release-please
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Get Latest Release Version
-        id: get_release_version
-        run: |
-          # Get the latest release version
-          release_version=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-                            "https://api.github.com/repos/${{ github.repository }}/releases/latest" \
-                            | jq -r .tag_name)
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-          # Use output variable to pass the release version to the next steps
-          echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
+      - name: Get PR number
+        id: pr_number
+        run: echo "PR_NUMBER=$(cat .version)" >> $GITHUB_ENV
 
-      - name: Set Image Tag
-        run: echo "DOCKER_TAG=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+      - name: Build and push Docker image with PR number tag
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          push: true
+          Dockerfile: ./Dockerfile
+          tags: karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
 
-      - name: Build and Push Docker Image
-        run: |
-          docker buildx create --use
-          docker buildx build -t public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG} .
-          docker tag public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG} public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG}
-          docker push public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG}
+      - name: Create PR
+        uses: peter-evans/create-pull-request@v3
+        with:
+          branch: pr/update-docker-tag-${{ env.PR_NUMBER }}
+          commit-message: "Update Docker image tag to ${{ env.PR_NUMBER }}"
+          title: "Update Docker image tag"
+          labels: "docker"
 
-env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_REGION: your-region
+
+# name: Release and Push to ECR
+
+# on:
+#   push:
+#     branches:
+#       - qubitsfrontenddd
+
+# jobs:
+#   release:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
+
+#       - name: Create release-please-config.json
+#         run: echo '{"plugins":["@release-please/update-version","@release-please/release-notes-generator","@release-please/changelog"]}' > release-please-config.json
+
+#       - name: Set up Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: '14'
+
+#       - name: Install Dependencies
+#         run: npm install
+
+#       - name: Release Please
+#         id: release
+#         uses: google-github-actions/release-please-action@v4
+#         with:
+#           token: ${{ secrets.PAT }}
+
+#   build_and_push:
+#     needs: release
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
+
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
+
+#       - name: Get Latest Release Version
+#         id: get_release_version
+#         run: |
+#           # Get the latest release version
+#           release_version=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+#                             "https://api.github.com/repos/${{ github.repository }}/releases/latest" \
+#                             | jq -r .tag_name)
+
+#           # Use output variable to pass the release version to the next steps
+#           echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
+
+#       - name: Set Image Tag
+#         run: echo "DOCKER_TAG=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+
+#       - name: Build and Push Docker Image
+#         run: |
+#           docker buildx create --use
+#           docker buildx build -t public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG} .
+#           docker tag public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG} public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG}
+#           docker push public.ecr.aws/n9k8h8q2/qubits-cdk:${DOCKER_TAG}
+
+# env:
+#   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#   AWS_REGION: your-region
 
 
