--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,7 +3,7 @@ name: release-please
 on:
   push:
     branches:
-      - qubitsfrontend
+      - qubitsfrontendddd
 
 permissions:
   contents: write
