fix: added branch name in the release-please.yml

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -3,7 +3,7 @@ name: Release Please
 on:
   push:
     branches:
-      - qubitsfrontendddd
+      - qubitsfrontend
 
 permissions:
   contents: write
