--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -59,71 +59,54 @@
 
 
 
-name: Release Please and Tag Docker Image
+  name: Create PR and Tag Docker Image
 
-on:
-  workflow_run:
-    workflows: ["Release Please"]
-    types:
-      - completed
-
-env:
-  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-
-jobs:
-  release-please:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18.17.0
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run release-please
-        run: npx release-please release-pr
-
-  create-pr-and-tag-image:
-    needs: release-please
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Get PR number
-        id: pr_number
-        run: echo "PR_NUMBER=$(cat .version)" >> $GITHUB_ENV
-
-      - name: Build and push Docker image with PR number tag
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          push: true
-          Dockerfile: ./Dockerfile
-          tags: karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
-
-      - name: Create PR
-        uses: peter-evans/create-pull-request@v3
-        with:
-          branch: pr/update-docker-tag-${{ env.PR_NUMBER }}
-          commit-message: "Update Docker image tag to ${{ env.PR_NUMBER }}"
-          title: "Update Docker image tag"
-          labels: "docker"
+  on:
+    pull_request:
+      types:
+        - opened
+        - synchronize
+  
+  env:
+    DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+    DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  
+  jobs:
+    create-pr-and-tag-image:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+  
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v1
+  
+        - name: Login to DockerHub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+  
+        - name: Get PR number
+          id: pr_number
+          run: echo "PR_NUMBER=$(echo ${{ github.event.number }})" >> $GITHUB_ENV
+  
+        - name: Build and push Docker image with PR version tag
+          uses: docker/build-push-action@v2
+          with:
+            context: ./
+            push: true
+            Dockerfile: ./Dockerfile
+            tags: karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
+  
+        - name: Create PR
+          uses: peter-evans/create-pull-request@v3
+          with:
+            branch: pr/update-docker-tag-${{ env.PR_NUMBER }}
+            commit-message: "Update Docker image tag to PR-${{ env.PR_NUMBER }}"
+            title: "Update Docker image tag to PR-${{ env.PR_NUMBER }}"
+            labels: "docker"
+  
 
 
 # name: Release and Push to ECR
