--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -90,18 +90,17 @@
             username: ${{ secrets.DOCKERHUB_USERNAME }}
             password: ${{ secrets.DOCKERHUB_TOKEN }}
   
-        - name: Get PR number
+        - name: Determine PR number
           id: pr_number
           run: echo "PR_NUMBER=$(echo ${{ github.event.number }})" >> $GITHUB_ENV
-  
+    
+        - name: Create branch for PR
+          run: git checkout -b pr/update-docker-tag-${{ env.PR_NUMBER }}
+    
         - name: Build and push Docker image with PR version tag
-          uses: docker/build-push-action@v2
-          with:
-            context: ./
-            push: true
-            Dockerfile: ./Dockerfile
-            tags: |
-              karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
+          run: |
+              docker build -t karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }} .
+              docker push karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
   
         - name: Create PR
           uses: peter-evans/create-pull-request@v3
