fix: docker tag

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -97,10 +97,14 @@
         - name: Create branch for PR
           run: git checkout -b pr/update-docker-tag-${{ env.PR_NUMBER }}
     
-        - name: Build and push Docker image with PR version tag
-          run: |
-              docker build -t karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }} .
-              docker push karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
+        - name: Build Docker image
+          run: docker build -t karthickmuppilirajan/qbfrontend:latest .
+  
+        - name: Tag Docker image with PR version
+          run: docker tag karthickmuppilirajan/qbfrontend:latest karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
+  
+        - name: Push Docker image with PR version tag
+          run: docker push karthickmuppilirajan/qbfrontend:${{ env.PR_NUMBER }}
   
         - name: Create PR
           uses: peter-evans/create-pull-request@v3
