--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -113,6 +113,7 @@
             commit-message: "Update Docker image tag to PR-${{ env.PR_NUMBER }}"
             title: "Update Docker image tag to PR-${{ env.PR_NUMBER }}"
             labels: "docker"
+            base: qubitsfrontend
   
 
 
