--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -92,7 +92,7 @@
   
         - name: Determine PR number
           id: pr_number
-          run: echo "PR_NUMBER=$(echo $GITHUB_REF | awk -F'/' '{print $3}')" >> $GITHUB_ENV
+          run: echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> $GITHUB_ENV
     
         - name: Create branch for PR
           run: git checkout -b pr/update-docker-tag-${{ env.PR_NUMBER }}
