--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -80,6 +80,8 @@
       steps:
         - name: Checkout code
           uses: actions/checkout@v2
+          with:
+            token: ${{ secrets.PAT }}
   
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
