fix: added skip pull request

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -90,6 +90,7 @@
             release-type: node
             token: ${{ secrets.PAT }}
             skip-github-release: true
+            skip-github-pull-request: false
             target-branch: qbstaging
   
         - name: Set up Docker Buildx
