fix: modified secrets name

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -85,8 +85,6 @@
           with:
             release-type: node
             token: ${{ secrets.PAT }}
-            skip-github-release: true
-            skip-github-pull-request: false
             target-branch: qbstaging
   
         - name: Checkout code at release tag
@@ -98,8 +96,8 @@
         - name: Docker login
           uses: docker/login-action@v1
           with:
-             username: ${{ secrets.DOCKER_USERNAME }}
-             password: ${{ secrets.DOCKER_PASSWORD }}
+             username: ${{ secrets.DOCKERHUB_USERNAME }}
+             password: ${{ secrets.DOCKERHUB_TOKEN }}
     
         - name: Docker build and tag
           run: |
